--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
+    "mocha-junit-reporter": "^1.13.0",
     "supertest": "^2.0.1"
   }
 }
