--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "engines": {
-	"node": "6.2.1"
+	"node": ">6.2.1"
   },
   "dependencies": {
     "ejs": "^2.4.1",
